@@ -13,6 +13,23 @@
 </tr>
 </table>
 <p>
+2003-04-05  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> VisualMagick/magick/magick_config.h.in: Add more documentation
+        and explanatory notes in order to lessen confusion.
+
+</UL>
+<p>
+2003-04-04  Glenn Randers-Pehrson &lt;randeg@alum.rpi.edu&gt;
+
+<UL>
+  <LI> magick/command.c, utilities/gm.c: Print "help" screen for a
+        tool when user types "gm tool" or "gm tool -help"
+  <LI> magick/command.c, magick/effect.c: add -ordered-dither option.
+
+</UL>
+<p>
 2003-04-04  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
